# aio

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: jekyll-gh-pages.yml
algorithms/: README.md
c/: README.md
c/cmake/: README.md
c/cmake/copy/: CMakeLists.txt  PKGBUILD
c/cmake/copy/src/file/: CMakeLists.txt  file.c  file.h
c/cmake/copy/src/main/: CMakeLists.txt  copy.c
c/cmake/copy/src/progress/: CMakeLists.txt  progress.c  progress.h
c/cmake/demo/: CMakeLists.txt  README.md
c/cmake/demo/example/: hi.c
c/cmake/demo/include/shared/: swap.h
c/cmake/demo/include/static/: max.h
c/cmake/demo/src/shared/: swap.c
c/cmake/demo/src/static/: max.c
c/cmake/simple_factory/: CMakeLists.txt  README.md
c/cmake/simple_factory/example/: client.c
c/cmake/simple_factory/include/shared/: hard_disk.h  hard_disk_factory.h  seagate_hard_disk.h  toshiba_hard_disk.h
c/cmake/simple_factory/src/shared/: hard_disk_factory.c  seagate_hard_disk.c  toshiba_hard_disk.c
c/cprimerplus/: README.md  for_demo.c  format_specifier.c  inform.c  platinum.c  s_gets.c  s_gets.h
c/file/: copy.c  file1.c  file2.c  rename4file.c  rw_byte_file.c
c/gtk4/: README.md  compile.txt  example-0.c  example-1.c  example-2.c  example-3.c  hello-world-gtk.c
c/linuxprogramming/: README.md
c/unix_c/: README.md  file.c  stdio_rqk.h
design-pattern/: README.md  settings.gradle
design-pattern/gradle/: libs.versions.toml
design-pattern/ilgroovy/: README.md  build.gradle
design-pattern/iljava/: build.gradle
docs/: 404.html  Gemfile  README.md  _config.yml  blog.html  cssTest.html  index.html  postcard.html
docs/_data/: archlinux.csv  build.csv  c.csv  git.csv  go.csv  home.csv  index.yml  java.csv  jvm.csv  linux.csv  mysql.csv  navigation.yml  redis.csv  shortcut.csv  windows.csv
docs/_docs/: archlinux.md  c.md  designpattern.md  git.md  go.md  gradle.md  imagemagick.md  intellijidea.md  kernel.md  maven.md  mysql.md  nacos.md  podman.md  rabbitmq.md  redis.md  resume.html  spring-framework.md  windows.md
docs/_includes/: carousel.html  carousel_slide.html  featurette.html  footer.html  footer_bak.html  navigation.html  stars.html  top.html
docs/_layouts/: catelog.html  content.html  default.html  main.html  page.html
docs/_sass/: docs.scss  footer.scss  header.scss  keyframes.scss  left.scss  main.scss  right.scss  syntax.scss
go/: README.md
go/gobyexample/: arrays.go  atomic-counters.go  base64-encoding.go  channel-buffering.go  channel-directions.go  channel-synchronization.go  closing-channel.go  command-line-arguments.go  command-line-flags.go  command-line-subcommands.go  context-in-http-servers.go  defer.go  directories.go  embed-directive.go  environment-variable.go  epoch.go  errors.go  execing-processes.go  exit  exit.go  file-paths.go  functions.go  generics.go  goroutines.go  http-client.go  http-servers.go  interfaces.go  intutils.go  intutils_test.go  line-filters.go  maps.go  methods.go  mutexes.go  non-blocking-channel.go  number-parsing.go  panic.go  pointers.go  random-numbers.go  range-over-channels.go  range.go  (+30 more)
groovy-java/: README.md  gradle.properties  settings.gradle
groovy-java/buildSrc/: build.gradle
groovy-java/gradle/: libs.versions.toml
groovy-java/gradle-plugins/: README.md  build.gradle
groovy-java/gradle-tasks/: README.md  build.gradle
groovy-java/groovy-app/: build.gradle
groovy-java/groovy-design-pattern/: README.md  build.gradle
groovy-java/groovy-study/: README.md  build.gradle
groovy-java/groovy-utilities/: build.gradle
groovy-java/java-agent/: README.md  build.gradle
groovy-java/java-app/: build.gradle
groovy-java/java-list/: build.gradle
groovy-java/java-utilities/: build.gradle
groovy-java/spring-app/: build.gradle
java-151/: README.md  build.gradle  settings.gradle
java-data-structure-algorithm/: gradle.properties  settings.gradle
java-design-pattern/: README.md  build.gradle  settings.gradle
java-io/: README.md  build.gradle  settings.gradle
java-juc/: settings.gradle
java-modular-gradle/: build.gradle  settings.gradle
java-modular-gradle/java-modular-svc/: README.md  build.gradle  gradle.properties  settings.gradle
java-records/: README.md  settings.gradle
java-records/java-151/: README.md  build.gradle
java-records/java-data-structure-algorithm/: README.md  build.gradle
java-records/java-design-pattern/: README_CN.md  build.gradle
java-records/java-juc/: README.md  build.gradle
jvm/: GC.md  JVMOptions.md  OOM.md  README.md  TLAB.md  build.gradle  classloader_subSystem.md  heap.md  method_area.md  native_method.md  program_counter_register.md  runtime_data_area.md  settings.gradle  stack.md  tools.md  对象的实例化.md
react/: README.md
react/app/: package.json
react/native/: README.md
rust/: README.md
rust/rust-by-example/: README.md
spring/: README.md  build.gradle
spring-cloud-alibaba/: README.md  gradle.properties  settings.gradle
spring-cloud-alibaba/nacos-config/: README.md  build.gradle  (+1 more)
spring-demo/: README.md  build.gradle  gradle.properties  settings.gradle
spring-dependency/: README.md  build.gradle  gradle.properties  settings.gradle
spring-guides/: build.gradle  gradle.properties  settings.gradle
tank/: README.md  build.gradle
(+2105 files in other folders)
