cmake_minimum_required(VERSION 3.26)
project(simple_factory C)
set(CMAKE_C_STANDARD 11)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/static)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/shared)
include_directories(${PROJECT_SOURCE_DIR}/include/)
add_library(_seagate_hard_disk SHARED src/shared/seagate_hard_disk.c)
add_library(_toshiba_hard_disk SHARED src/shared/toshiba_hard_disk.c)
add_library(_hard_disk_factory SHARED src/shared/hard_disk_factory.c)
add_executable(hard_disk example/client.c)
target_link_libraries(hard_disk _seagate_hard_disk _toshiba_hard_disk _hard_disk_factory)